fixing logo image on iphone

--- a/Client/mbs_registration.css
+++ b/Client/mbs_registration.css
@@ -179,7 +179,7 @@
     }
 
     .main {
-        top: 25%;
+        top: 30%;
         left: 50%;
     }
 
@@ -189,7 +189,7 @@
 
     .main .logo {
         width: 100%;
-        height: 25% !important;
+        height:25% !important;
         background-position: center;
         background-attachment: fixed;
     }
@@ -203,7 +203,13 @@
 
     .registration .logo {
         width: 100%;
-        height: 25% !important;
+        height: 12% !important;
+        background-position: center;
+        background-attachment: fixed;
+    } 
+    .registration .logo2 {
+        width: 100%;
+        height: 7% !important;
         background-position: center;
         background-attachment: fixed;
     }
@@ -217,11 +223,16 @@
 
     .confirm .logo {
         width: 100%;
-        height: 25% !important;
+        height: 12% !important;
         background-position: center;
         background-attachment: fixed;
     }
-
+    .confirm .logo2 {
+        width: 100%;
+        height: 7% !important;
+        background-position: center;
+        background-attachment: fixed;
+    }
     .confirm .box {
         text-align: center;
     }
